--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "twitchy"
 version = "0.0.2"
 edition = "2021"
+authors = ["Mads Hougesen <mads@mhouge.dk>"]
+description = "Twitchy is a WIP client library for the Twitch API"
+repository = "https://github.com/hougesen/twitchy"
+license = "MIT"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
